<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Richard</string>

    <string name="delete">Löschen</string>
    <string name="undo">Zurück</string>
    <string name="save_game">Spiel speichern</string>
    <string name="point_seperator"> - </string>
    <string name="settings">Einstellungen</string>
    <string name="names">Namen</string>
    <string name="player1Hint">Spieler A</string>
    <string name="player2Hint">Spieler B</string>
    <string name="winprob">Gewinnwahrscheinlichkeit</string>
    <string name="winprob_on_serve">Gewinnwahrscheinlichkeit bei Aufschlag</string>
    <string name="start">Start</string>
    <string name="importance">Importance</string>
    <string name="points_per_importance">Punkte / Importance</string>
    <string name="serve_points">Aufschlagspunkte</string>
    <string name="breaks">Breaks</string>
    <string name="game_running_heading">Laufende Spiele</string>
    <string name="game_over_heading">Abgeschlossene Spiele</string>
    <string name="player_a">Spieler A</string>
    <string name="player_b">Spieler B</string>

    <string name="sql_player_stats">
SELECT SUM(count_p) AS count, SUM(wins_p) as wins, player
FROM (
        SELECT COUNT(*) AS count_p, SUM(match_winner = 1) AS wins_p, match_player2 as player
        FROM matches
        WHERE match_winner != 0 AND match_player1 = ?
        GROUP BY match_player2
    UNION ALL
        SELECT COUNT(*) AS count_p, SUM(match_winner = 2) AS wins_p, match_player1 as player
        FROM matches
        WHERE match_winner != 0 AND match_player2 = ?
        GROUP BY match_player1
)
WHERE player IS NOT NULL
GROUP BY player
    </string>

    <string name="sql_saved_matches">
SELECT *
FROM (
        SELECT match_id as _id, match_player1, match_player2, match_winner * 2 as match_winner, match_start
        FROM matches
    UNION ALL
        SELECT DISTINCT -2, NULL, NULL, -1, NULL
        FROM matches
        WHERE match_winner = 0
    UNION ALL
        SELECT DISTINCT -1, NULL, NULL, 1, NULL
        FROM matches
        WHERE match_winner != 0
)
ORDER BY match_winner ASC, match_start DESC
    </string>

</resources>
