<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/RichardToolbar"
        android:id="@+id/toolbar"
        android:elevation="4dp"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"/>
   
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textHeading"
            android:text="@string/names"
            android:textSize="20sp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/nameI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/player1Hint"/>
            <AutoCompleteTextView
                android:id="@+id/nameJ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/player2Hint"/>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/textHeading"
            android:text="@string/winprob"
            android:textSize="20sp" />
        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/matchProp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/matchPropI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="50%"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/matchPropJ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="50%"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/expand_header"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/expand_button"
                android:src="@drawable/ic_chevron_down_grey600_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/textHeading"
                android:text="Erweitert"
                android:textSize="20sp"
                android:layout_margin="8dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/advanced_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:alpha="0"
            android:visibility="gone" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/textHeading"
                android:text="Matchart"
                android:textSize="20sp" />
            <Spinner
                android:id="@+id/match_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/start" />
</LinearLayout>
